Tweak the gtk-font-name setting docs

Clarify that only parts of the font name are used.

https://bugzilla.gnome.org/show_bug.cgi?id=758367